samples/_failures_safe/1761513551_af6adb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9ef9204b.c: In function ‘parser_init’:
./samples/SAFE/__tmp_9ef9204b.c:150:5: error: expected expression at end of input
  150 |     parser->current_token = lexer_next_token(
      |     ^~~~~~
./samples/SAFE/__tmp_9ef9204b.c:150:5: error: expected declaration or statement at end of input
